segundoEjercicio/IterableFunctionsParser.py
# Generated from IterableFunctions.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class IterableFunctionsParser ( Parser ):

    grammarFileName = "IterableFunctions.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'MAP'", "'('", "','", "')'", "'FILTER'", 
                     "'lambda'", "':'", "'['", "']'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'=='", "'!='", "'<'", "'>'", "'<='", 
                     "'>='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "INTEGER", "IDENTIFIER", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_mapDeclaration = 2
    RULE_filterDeclaration = 3
    RULE_lambdaFunction = 4
    RULE_iterableObject = 5
    RULE_array = 6
    RULE_tuple = 7
    RULE_expressionList = 8
    RULE_expression = 9
    RULE_binaryOp = 10

    ruleNames =  [ "program", "statement", "mapDeclaration", "filterDeclaration", 
                   "lambdaFunction", "iterableObject", "array", "tuple", 
                   "expressionList", "expression", "binaryOp" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    INTEGER=21
    IDENTIFIER=22
    WS=23

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IterableFunctionsParser.StatementContext)
            else:
                return self.getTypedRuleContext(IterableFunctionsParser.StatementContext,i)


        def getRuleIndex(self):
            return IterableFunctionsParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = IterableFunctionsParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 22
                self.statement()
                self.state = 25 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1 or _la==5):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mapDeclaration(self):
            return self.getTypedRuleContext(IterableFunctionsParser.MapDeclarationContext,0)


        def filterDeclaration(self):
            return self.getTypedRuleContext(IterableFunctionsParser.FilterDeclarationContext,0)


        def getRuleIndex(self):
            return IterableFunctionsParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = IterableFunctionsParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 29
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 27
                self.mapDeclaration()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 28
                self.filterDeclaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MapDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lambdaFunction(self):
            return self.getTypedRuleContext(IterableFunctionsParser.LambdaFunctionContext,0)


        def iterableObject(self):
            return self.getTypedRuleContext(IterableFunctionsParser.IterableObjectContext,0)


        def getRuleIndex(self):
            return IterableFunctionsParser.RULE_mapDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMapDeclaration" ):
                listener.enterMapDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMapDeclaration" ):
                listener.exitMapDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMapDeclaration" ):
                return visitor.visitMapDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def mapDeclaration(self):

        localctx = IterableFunctionsParser.MapDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_mapDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.match(IterableFunctionsParser.T__0)
            self.state = 32
            self.match(IterableFunctionsParser.T__1)
            self.state = 33
            self.lambdaFunction()
            self.state = 34
            self.match(IterableFunctionsParser.T__2)
            self.state = 35
            self.iterableObject()
            self.state = 36
            self.match(IterableFunctionsParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FilterDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lambdaFunction(self):
            return self.getTypedRuleContext(IterableFunctionsParser.LambdaFunctionContext,0)


        def iterableObject(self):
            return self.getTypedRuleContext(IterableFunctionsParser.IterableObjectContext,0)


        def getRuleIndex(self):
            return IterableFunctionsParser.RULE_filterDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFilterDeclaration" ):
                listener.enterFilterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFilterDeclaration" ):
                listener.exitFilterDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFilterDeclaration" ):
                return visitor.visitFilterDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def filterDeclaration(self):

        localctx = IterableFunctionsParser.FilterDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_filterDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(IterableFunctionsParser.T__4)
            self.state = 39
            self.match(IterableFunctionsParser.T__1)
            self.state = 40
            self.lambdaFunction()
            self.state = 41
            self.match(IterableFunctionsParser.T__2)
            self.state = 42
            self.iterableObject()
            self.state = 43
            self.match(IterableFunctionsParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LambdaFunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(IterableFunctionsParser.IDENTIFIER, 0)

        def expression(self):
            return self.getTypedRuleContext(IterableFunctionsParser.ExpressionContext,0)


        def getRuleIndex(self):
            return IterableFunctionsParser.RULE_lambdaFunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLambdaFunction" ):
                listener.enterLambdaFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLambdaFunction" ):
                listener.exitLambdaFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLambdaFunction" ):
                return visitor.visitLambdaFunction(self)
            else:
                return visitor.visitChildren(self)




    def lambdaFunction(self):

        localctx = IterableFunctionsParser.LambdaFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_lambdaFunction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(IterableFunctionsParser.T__5)
            self.state = 46
            self.match(IterableFunctionsParser.IDENTIFIER)
            self.state = 47
            self.match(IterableFunctionsParser.T__6)
            self.state = 48
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IterableObjectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array(self):
            return self.getTypedRuleContext(IterableFunctionsParser.ArrayContext,0)


        def tuple_(self):
            return self.getTypedRuleContext(IterableFunctionsParser.TupleContext,0)


        def getRuleIndex(self):
            return IterableFunctionsParser.RULE_iterableObject

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIterableObject" ):
                listener.enterIterableObject(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIterableObject" ):
                listener.exitIterableObject(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIterableObject" ):
                return visitor.visitIterableObject(self)
            else:
                return visitor.visitChildren(self)




    def iterableObject(self):

        localctx = IterableFunctionsParser.IterableObjectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_iterableObject)
        try:
            self.state = 52
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.array()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 51
                self.tuple_()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressionList(self):
            return self.getTypedRuleContext(IterableFunctionsParser.ExpressionListContext,0)


        def getRuleIndex(self):
            return IterableFunctionsParser.RULE_array

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray" ):
                listener.enterArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray" ):
                listener.exitArray(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray" ):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)




    def array(self):

        localctx = IterableFunctionsParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_array)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(IterableFunctionsParser.T__7)
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 6291780) != 0):
                self.state = 55
                self.expressionList()


            self.state = 58
            self.match(IterableFunctionsParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TupleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressionList(self):
            return self.getTypedRuleContext(IterableFunctionsParser.ExpressionListContext,0)


        def getRuleIndex(self):
            return IterableFunctionsParser.RULE_tuple

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTuple" ):
                listener.enterTuple(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTuple" ):
                listener.exitTuple(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTuple" ):
                return visitor.visitTuple(self)
            else:
                return visitor.visitChildren(self)




    def tuple_(self):

        localctx = IterableFunctionsParser.TupleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_tuple)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(IterableFunctionsParser.T__1)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 6291780) != 0):
                self.state = 61
                self.expressionList()


            self.state = 64
            self.match(IterableFunctionsParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IterableFunctionsParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(IterableFunctionsParser.ExpressionContext,i)


        def getRuleIndex(self):
            return IterableFunctionsParser.RULE_expressionList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionList" ):
                listener.enterExpressionList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionList" ):
                listener.exitExpressionList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionList" ):
                return visitor.visitExpressionList(self)
            else:
                return visitor.visitChildren(self)




    def expressionList(self):

        localctx = IterableFunctionsParser.ExpressionListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expressionList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.expression(0)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 67
                self.match(IterableFunctionsParser.T__2)
                self.state = 68
                self.expression(0)
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lambdaFunction(self):
            return self.getTypedRuleContext(IterableFunctionsParser.LambdaFunctionContext,0)


        def iterableObject(self):
            return self.getTypedRuleContext(IterableFunctionsParser.IterableObjectContext,0)


        def INTEGER(self):
            return self.getToken(IterableFunctionsParser.INTEGER, 0)

        def IDENTIFIER(self):
            return self.getToken(IterableFunctionsParser.IDENTIFIER, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IterableFunctionsParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(IterableFunctionsParser.ExpressionContext,i)


        def binaryOp(self):
            return self.getTypedRuleContext(IterableFunctionsParser.BinaryOpContext,0)


        def getRuleIndex(self):
            return IterableFunctionsParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = IterableFunctionsParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.state = 75
                self.lambdaFunction()
                pass
            elif token in [2, 8]:
                self.state = 76
                self.iterableObject()
                pass
            elif token in [21]:
                self.state = 77
                self.match(IterableFunctionsParser.INTEGER)
                pass
            elif token in [22]:
                self.state = 78
                self.match(IterableFunctionsParser.IDENTIFIER)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 87
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = IterableFunctionsParser.ExpressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                    self.state = 81
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 82
                    self.binaryOp()
                    self.state = 83
                    self.expression(2) 
                self.state = 89
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class BinaryOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return IterableFunctionsParser.RULE_binaryOp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinaryOp" ):
                listener.enterBinaryOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinaryOp" ):
                listener.exitBinaryOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBinaryOp" ):
                return visitor.visitBinaryOp(self)
            else:
                return visitor.visitChildren(self)




    def binaryOp(self):

        localctx = IterableFunctionsParser.BinaryOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_binaryOp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 2096128) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[9] = self.expression_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expression_sempred(self, localctx:ExpressionContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 1)
         




